--- a/package.json
+++ b/package.json
@@ -3,19 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react-components": "^9.37.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "flowbite": "^2.0.0",
-    "flowbite-react": "^0.6.4",
-    "nodemon": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@fluentui/react-components": "^9.42.0",
+    "@material-tailwind/react": "^2.1.5",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
+    "react-router-dom": "^6.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
