--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-tailwind/react": "^2.1.5",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
+    "react-axios": "^2.0.6",
     "react-router-dom": "^6.20.1"
   },
   "scripts": {
